// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton Skeleton advanceVue demo works fine 1`] = `
<div
  class="t-skeleton-demo"
>
  <section
    class="t-skeleton-demo-card"
  >
    <div
      class="header"
    >
      组合成网页效果
    </div>
    <div
      class="content"
    >
      <div
        class="t-skeleton"
      >
        
        
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-rect"
            style="width: 33%; height: 180px;"
          >
            image
          </div>
          <div
            class="t-skeleton__col t-skeleton--type-rect"
            style="width: 33%; height: 180px;"
          >
            image
          </div>
          <div
            class="t-skeleton__col t-skeleton--type-rect"
            style="width: 33%; height: 180px;"
          >
            image
          </div>
          
        </div>
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-circle"
            style="width: 50px; height: 50px;"
          >
            <!---->
          </div>
          <div
            class="t-skeleton__col t-skeleton--type-rect"
            style="width: 80%; height: 30px; margin: 20px 0px;"
          >
            <!---->
          </div>
          <div
            class="t-skeleton__col t-skeleton--type-rect"
            style="width: 80px; height: 30px; margin-left: 20px;"
          >
            确定
          </div>
          
        </div>
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-text"
          >
            <!---->
          </div>
          
        </div>
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-text"
          >
            <!---->
          </div>
          
        </div>
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-text"
            style="width: 70%; margin: 0px 0px 16px 0px;"
          >
            <!---->
          </div>
          
        </div>
        <div
          class="t-skeleton__row"
        >
          
          <div
            class="t-skeleton__col t-skeleton--type-rect"
            style="width: 100%; height: 300px;"
          >
            <div
              class="row-col-content"
            >
              <h3
                class="row-col-content__header"
              >
                标题
              </h3>
              <section
                class="row-col-content__content"
              >
                 内容
              </section>
            </div>
          </div>
          
        </div>
        
        
      </div>
    </div>
  </section>
  <section
    class="t-skeleton-demo-card"
  >
    <div
      class="header"
    >
      组合成列表效果
    </div>
    <div
      class="content"
    >
      <ul
        class="t-skeleton-demo-list"
      >
        
        <li>
          <div
            class="t-skeleton avatar"
          >
            
            
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-circle"
                style="width: 56px; height: 56px;"
              >
                <!---->
              </div>
              
            </div>
            
            
          </div>
          <div
            class="t-skeleton paragraph"
          >
            
            
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
              >
                <!---->
              </div>
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
              >
                <!---->
              </div>
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
                style="width: 70%;"
              >
                <!---->
              </div>
              
            </div>
            
            
          </div>
        </li>
        <li>
          <div
            class="t-skeleton avatar"
          >
            
            
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-circle"
                style="width: 56px; height: 56px;"
              >
                <!---->
              </div>
              
            </div>
            
            
          </div>
          <div
            class="t-skeleton paragraph"
          >
            
            
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
              >
                <!---->
              </div>
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
              >
                <!---->
              </div>
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
                style="width: 70%;"
              >
                <!---->
              </div>
              
            </div>
            
            
          </div>
        </li>
        <li>
          <div
            class="t-skeleton avatar"
          >
            
            
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-circle"
                style="width: 56px; height: 56px;"
              >
                <!---->
              </div>
              
            </div>
            
            
          </div>
          <div
            class="t-skeleton paragraph"
          >
            
            
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
              >
                <!---->
              </div>
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
              >
                <!---->
              </div>
              
            </div>
            <div
              class="t-skeleton__row"
            >
              
              <div
                class="t-skeleton__col t-skeleton--type-text"
                style="width: 70%;"
              >
                <!---->
              </div>
              
            </div>
            
            
          </div>
        </li>
        
      </ul>
    </div>
  </section>
</div>
`;

exports[`Skeleton Skeleton animationVue demo works fine 1`] = `
<div
  class="t-row t-row--start t-row--top t-skeleton-demo"
  style="margin-left: 0px; margin-right: 0px;"
>
  
  
  <div
    class="t-col t-col-12"
    style="padding-left: 0px; padding-right: 0px;"
  >
    
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
        渐变加载动画
      </div>
      <div
        class="content"
      >
        <div
          class="t-skeleton"
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-gradient"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-gradient"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-gradient"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-gradient"
              style="width: 70%;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
      </div>
    </section>
    
  </div>
  <div
    class="t-col t-col-12"
    style="padding-left: 0px; padding-right: 0px;"
  >
    
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
        闪烁加载动画
      </div>
      <div
        class="content"
      >
        <div
          class="t-skeleton"
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-flashed"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-flashed"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-flashed"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-flashed"
              style="width: 70%;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
      </div>
    </section>
    
  </div>
  
  
</div>
`;

exports[`Skeleton Skeleton baseVue demo works fine 1`] = `
<div>
  <div
    class="t-switch t-size-m t-is-checked mb-20"
  >
    <span
      class="t-switch__handle"
    >
      <!---->
    </span>
    <div
      class="t-switch__content t-size-m"
    >
      <!---->
    </div>
  </div>
  <div>
    <div
      class="t-skeleton"
    >
      
      
      <div
        class="t-skeleton__row"
      >
        
        <div
          class="t-skeleton__col t-skeleton--type-text"
        >
          <!---->
        </div>
        
      </div>
      <div
        class="t-skeleton__row"
      >
        
        <div
          class="t-skeleton__col t-skeleton--type-text"
        >
          <!---->
        </div>
        
      </div>
      <div
        class="t-skeleton__row"
      >
        
        <div
          class="t-skeleton__col t-skeleton--type-text"
        >
          <!---->
        </div>
        
      </div>
      <div
        class="t-skeleton__row"
      >
        
        <div
          class="t-skeleton__col t-skeleton--type-text"
          style="width: 70%;"
        >
          <!---->
        </div>
        
      </div>
      
      
    </div>
  </div>
</div>
`;

exports[`Skeleton Skeleton themeVue demo works fine 1`] = `
<div
  class="t-row t-row--start t-row--top t-skeleton-demo"
  style="margin-left: 0px; margin-right: 0px;"
>
  
  
  <div
    class="t-col t-col-12"
    style="padding-left: 0px; padding-right: 0px;"
  >
    
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
        文本
      </div>
      <div
        class="content"
      >
        <div
          class="t-skeleton"
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
      </div>
    </section>
    
  </div>
  <div
    class="t-col t-col-12"
    style="padding-left: 0px; padding-right: 0px;"
  >
    
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
        头像
      </div>
      <div
        class="content"
      >
        <div
          class="t-skeleton"
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-circle"
              style="width: 56px; height: 56px;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
      </div>
    </section>
    
  </div>
  <div
    class="t-col t-col-12"
    style="padding-left: 0px; padding-right: 0px;"
  >
    
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
        段落
      </div>
      <div
        class="content"
      >
        <div
          class="t-skeleton"
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="width: 70%;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
      </div>
    </section>
    
  </div>
  <div
    class="t-col t-col-12"
    style="padding-left: 0px; padding-right: 0px;"
  >
    
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
        头像描述
      </div>
      <div
        class="content"
      >
        <div
          class="t-skeleton"
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-circle"
            >
              <!---->
            </div>
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 32px;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
      </div>
    </section>
    
  </div>
  <div
    class="t-col t-col-12"
    style="padding-left: 0px; padding-right: 0px;"
  >
    
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
        选项卡
      </div>
      <div
        class="content"
      >
        <div
          class="t-skeleton"
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 200px;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
      </div>
    </section>
    
  </div>
  <div
    class="t-col t-col-12"
    style="padding-left: 0px; padding-right: 0px;"
  >
    
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
        文章
      </div>
      <div
        class="content"
      >
        <div
          class="t-skeleton"
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-rect"
              style="width: 100%; height: 30px;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-rect"
              style="width: 100%; height: 200px;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            >
              <!---->
            </div>
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            >
              <!---->
            </div>
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            >
              <!---->
            </div>
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            >
              <!---->
            </div>
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            >
              <!---->
            </div>
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
      </div>
    </section>
    
  </div>
  
  
</div>
`;
